--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
+    "dev:server": "adonis serve --dev --debug",
     "test": "node ace test"
   },
   "keywords": [
@@ -23,7 +24,8 @@
     "@adonisjs/fold": "^4.0.9",
     "@adonisjs/framework": "^5.0.9",
     "@adonisjs/ignitor": "^2.0.8",
-    "@adonisjs/lucid": "^6.1.3"
+    "@adonisjs/lucid": "^6.1.3",
+    "pg": "^8.4.1"
   },
   "devDependencies": {},
   "autoload": {
