--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - "8080:8080"
     environment:
       - HOST=0.0.0.0
+
   db:
     container_name: "${APP_NAME}-db"
     image: postgres:alpine
@@ -27,3 +28,14 @@ services:
       POSTGRES_USER: ${DB_USER}
       POSTGRES_DB: ${DB_DATABASE}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
+
+  nginx:
+    image: nginx:alpine
+    container_name: "${APP_NAME}-web"
+    volumes:
+      - ./infra/nginx/default.conf:/etc/nginx/conf.d/default.conf
+    ports:
+      - 81:80
+    depends_on:
+      - app
+    restart: always
